--- a/src/app/views/workout-cards/workout/workout.component.scss
+++ b/src/app/views/workout-cards/workout/workout.component.scss
@@ -5,6 +5,8 @@
 }
 
 .workout-footer {
+  background-color: #fff;
+
   &__button {
     .button-inner {
       flex-flow: column;
