--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -51,7 +51,7 @@ $colors: (
   light:      #222,
   shadow:     rgba(0, 0, 0, 0.14),
   dark:       #CDCDCD,
-  background: #555
+  background: #666
 );
 
 
